--- a/amazon/index.html
+++ b/amazon/index.html
@@ -1,170 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazon Coupon Finder</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            font-family: 'Roboto', sans-serif;
-            background-color: #f8f9fa;
-            text-align: center;
-        }
-
-        .logo {
-            margin-top: 50px;
-        }
-
-        .search-box {
-            margin-top: 20px;
-        }
-
-        .search-input {
-            width: 80%;
-            padding: 15px;
-            border: none;
-            border-bottom: 2px solid #4caf50;
-            background-color: #f8f9fa;
-            font-size: 16px;
-            border-radius: 5px;
-            outline: none;
-        }
-
-        .button {
-            padding: 10px 20px;
-            border-radius: 20px;
-            border: none;
-            background-color: #4caf50;
-            color: white;
-            font-size: 16px;
-            cursor: pointer;
-            margin-top: 10px;
-            outline: none;
-        }
-
-        .footer {
-            margin-top: 30px;
-            padding: 10px;
-            background-color: #f2f2f2;
-            color: #525252;
-        }
-
-        #loading, .captcha-loading {
-            display: none;
-            margin-top: 20px;
-        }
-
-        .loader {
-            border: 4px solid #f3f3f3;
-            border-radius: 50%;
-            border-top: 4px solid #4caf50;
-            width: 50px;
-            height: 50px;
-            animation: spin 2s linear infinite;
-            margin: auto;
-        }
-
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        .coupon-box {
-            display: none;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 80%;
-            margin: 20px auto;
-        }
-
-        .coupon-message {
-            color: #333;
-            margin-bottom: 20px;
-            font-weight: bold;
-        }
-
-        .captcha-warning {
-            margin-bottom: 20px;
-            color: #525252;
-        }
-
-        .separator {
-            height: 3px;
-            background-color: #4caf50;
-            width: 60px;
-            margin: 10px auto;
-            border-radius: 5px;
-        }
-
-        @media only screen and (max-width: 600px) {
-            .search-input {
-                width: 90%;
-            }
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Amazon Coupon Finder</title>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+<style>
+  body, html {
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;;
+    background-color: #f8f9fa;
+    text-align: center;
+  }
+  .search-box, .captcha-section {
+    margin-top: 50px;
+  }
+  .search-input, .captcha-display {
+    width: 80%;
+    padding: 15px;
+    border: 1px solid #ddd;
+    font-size: 16px;
+    border-radius: 20px;
+    outline: none;
+    display: block;
+    margin: 20px auto;
+  }
+  .button {
+    padding: 10px 20px;
+    border-radius: 20px;
+    border: none;
+    background-color: #4caf50; 
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    margin-top: 10px;
+    outline: none;
+  }
+  .loader {
+    border: 4px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 4px solid #4caf50; 
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+    margin: auto; 
+  }
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  .coupon-message {
+    color: #333;
+    margin-bottom: 20px;
+    font-weight: bold;
+  }
+  .captcha-title {
+    font-size: 20px;
+    margin: 30px 0;
+    color: #333;
+  }
+  .divider {
+    background-color: #4caf50;
+    height: 4px;
+    width: 60%;
+    margin: 25px auto;
+    border-radius: 4px;
+  }
+  .footer {
+    margin-top: 30px;
+    padding: 10px;
+    background-color: #f2f2f2;
+    color: #525252;
+  }
+  @media only screen and (max-width: 600px) {
+    .search-input, .captcha-display {
+      width: 90%;
+    }
+  }
+</style>
 </head>
 <body>
 
-    <div class="logo">
-        <img src="logo.png" alt="Website Logo" style="max-width: 400px;">
-    </div>
+<div class="search-box">
+  <input type="text" class="search-input" placeholder="Enter Amazon product URL">
+  <button class="button" onclick="findCoupon()">Find Coupon</button>
+</div>
 
-    <div class="search-box">
-        <input type="text" class="search-input" placeholder="Enter Amazon product URL" id="searchInput">
-        <button class="button" onclick="findCoupon()">Find Coupon</button>
-    </div>
+<div id="loading" class="search-box" style="display:none;">
+  <div class="loader"></div>
+</div>
 
-    <div id="loading" class="search-box">
-        <div class="loader"></div>
-    </div>
+<div class="captcha-section" id="captchaSection" style="display:none;">
+  <div class="coupon-message">(1) coupon found *</div>
+  <div class="divider"></div> <!-- Beautiful separation -->
+  <div class="captcha-title">Solve the captcha below to view the Coupon</div>
+  <div class="captcha-display" id="captchaDisplay">
+    <!-- Captcha will be rendered here -->
+  </div>
+</div>
 
-    <div id="couponBox" class="coupon-box">
-        <!-- Coupon results will be displayed here -->
-    </div>
+<div class="footer">
+  Privacy Policy | ToS | Support<br>
+  CouponSail, 2024 All rights reserved
+</div>
 
-    <div class="footer">
-        Privacy Policy | ToS | Support<br> CouponSail, 2024 All rights reserved
-    </div>
+<script>
+function findCoupon() {
+  const loadingElem = document.getElementById('loading');
+  loadingElem.style.display = 'block';
+  
+  setTimeout(() => {
+    loadingElem.style.display = 'none';
+    displayCaptcha();
+  }, 3000); // Suppose the captcha loads in a maximum of 3 seconds.
+}
 
-    <script>
-        function findCoupon() {
-            const searchInput = document.getElementById('searchInput');
-            const loadingElem = document.getElementById('loading');
-            const couponBox = document.getElementById('couponBox');
+function displayCaptcha() {
+  const captchaSection = document.getElementById('captchaSection');
+  const captchaDisplay = document.getElementById('captchaDisplay');
 
-            if (searchInput.value.trim() === '') {
-                alert("Please enter an Amazon product URL");
-                return;
-            }
+  // Dynamically load and display captcha 
+  // For demonstration, using an element to simulate captcha for now.
+  let captchaPlaceholder = document.createElement('div');
+  captchaPlaceholder.innerHTML = "<div data-captcha-enable='true'></div>"; // Simulated Captcha element
+  captchaDisplay.appendChild(captchaPlaceholder);
 
-            loadingElem.style.display = 'block';
-            
-            // Simulating network request by delaying the captcha display
-            setTimeout(() => {
-                loadingElem.style.display = 'none';
-                
-                couponBox.innerHTML = `
-                    <div class="coupon-message">(1) coupon found</div>
-                    <div class="separator"></div>
-                    <div class="captcha-warning">Solve the captcha below to view the Coupon</div>
-                    <div class="captcha-section">
-                        <div data-captcha-enable="true"></div>
-                    </div>
-                `;
+  captchaSection.style.display = 'block';
+}
+</script>
 
-                couponBox.style.display = 'block';
-
-            }, 3000); // Delay for the loading effect
-        }
-    </script>
-
-    <!-- Captcha Script -->
-    <script type="text/javascript" src="https://unlockcontent.net/cp/js/j342y"></script>
+<!-- Placeholder for the Captcha script inclusion -->
+<!-- Mimic loading captcha script dynamically if needed -->
 
 </body>
 </html>
